[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Estructuras Espaciales/estacionEspacial.png" type="Texture" id=1]
[ext_resource path="res://Juego/Estructuras Espaciales/AreaAtraccion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Estructuras Espaciales/recargaSFX.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Estructuras Espaciales/vacioSFX.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Estructuras Espaciales/EstacionRecarga.gd" type="Script" id=5]
[ext_resource path="res://Juego/Estructuras Espaciales/SpriteRecarga.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/UI/barraPorcentaje.ttf" type="DynamicFontData" id=7]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "activado"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaEstacionFisica:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.5 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1.2, 1.2 ), Vector2( 0.8, 0.8 ), Vector2( 1.2, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("AreaRecarga/SpriteRecarga:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 2.3, 2, 0.03 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga/SpriteRecarga:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 100, 100 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaEstacionFisica:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.286275, 0.74902, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0332031, 0.0332031, 0.0332031, 0.498039 )

[sub_resource type="DynamicFont" id=6]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="EstacionRecarga" type="Node2D" groups=[
"minimapa",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 59
script = ExtResource( 5 )

[node name="AreaEstacionFisica" type="Area2D" parent="."]
position = Vector2( -7.12744, 0 )
z_as_relative = false
gravity = 1000.0
collision_layer = 0

[node name="SpriteEstacion" type="Sprite" parent="AreaEstacionFisica"]
texture = ExtResource( 1 )

[node name="ColisionEstacion" type="CollisionShape2D" parent="AreaEstacionFisica"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 12, 14 )
shape = SubResource( 1 )
one_way_collision = true

[node name="AreaRecarga" parent="." instance=ExtResource( 2 )]
z_as_relative = false

[node name="SpriteRecarga" parent="AreaRecarga" instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "activado"
anims/activado = SubResource( 2 )
anims/default = SubResource( 3 )

[node name="VacioSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="RecargaSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.532
bus = "SFX"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -200.0
margin_top = -390.0
margin_right = 200.0
margin_bottom = -342.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="AreaEstacionFisica" to="." method="_on_AreaEstacionFisica_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
